--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.3.0",
-    "axios": "^1.6.0",
-    "dotenv": "^10.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^2.1.1"
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "cfclear": "./cfclear",
@@ -42,10 +42,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
-    "bootstrap": "^5.1.3",
-    "react-bootstrap": "^2.0.0-rc.0",
-    "sass": "^1.42.1"
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "bootstrap": "^5.3.2",
+    "react-bootstrap": "^2.9.1",
+    "sass": "^1.69.5"
   }
 }
