--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "rollup": "^4.22.4",
+    "rollup": "3.29.5",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
