--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^5.1.0-next.26",
     "rollup": "3.29.5",
-    "web-vitals": "^3.5.2"
+    "web-vitals": "^3.5.2",
+    "webpack-dev-server": "^5.2.2"
   },
   "scripts": {
     "cfclear": "./cfclear",
