--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
             cd ${{ secrets.DEPLOY_PATH }}
             git pull origin master
-            nvm use && npm run build && ./cfclear
+            nvm use && npm ci && npm run build && ./cfclear
