--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "types": ["@testing-library/jest-dom"],
     "module": "ESNext",
     "skipLibCheck": true,
     "moduleResolution": "bundler",
